--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
+		<title>The Asteroid Game</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>Welcome to My Asteroids Game! ٩(◕‿◕)۶</h1>
 		</header>
 			<section id="content">
 				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    How To Play: <br>
+		    ✧ press W to accelerate <br>
+		    ✧ press A to turn left <br>
+		    ✧ press D to turn right <br>
+		    ✧ press E to go into hyperspace <br>
+		    ･*:.｡. .｡.:*･゜ﾟ･*☆ Have Fun Playing! ･*:.｡. .｡.:*･゜ﾟ･*☆
 	    </footer>
 	</body>
 </html>
