--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 		    ✧ press A to turn left <br>
 		    ✧ press D to turn right <br>
 		    ✧ press E to go into hyperspace <br>
+		    ✧ press SPACE to shoot bullets <br>
+		    ✧ shoot down all the asteroids before your lives run out to win! <br>
+		    ✧ refresh the page to restart <br>
 		    ･*:.｡. .｡.:*･゜ﾟ･*☆ Have Fun Playing! ･*:.｡. .｡.:*･゜ﾟ･*☆
 	    </footer>
 	</body>
